Fix image about image alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -175,6 +175,10 @@ section {
   margin: auto 0;
 }
 
+.profile-pic {
+  border-radius: 50%;
+}
+
 .section__text {
   align-self: center;
   text-align: center;
@@ -264,6 +268,7 @@ section {
 
 #about {
   position: relative;
+  justify-content: center;
 }
 
 .about-containers {
@@ -280,10 +285,16 @@ section {
 .about-containers,
 .about-details-container {
   display: flex;
+  max-width: 800px;
 }
 
 .about-pic {
+  display: flex;
   border-radius: 2rem;
+  width: 100%;
+  height: 100%;
+  min-width: 400px;
+  object-fit: cover;
 }
 
 .arrow {
@@ -304,10 +315,12 @@ section {
 
 .section-container {
   gap: 4rem;
-  height: 80%;
+  height: 60%;
+  justify-content: center;
 }
 
 .section__pic-container {
+  display: flex;
   height: 400px;
   width: 400px;
   margin: auto 0;
